--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"watch": "tsc -w",
 		"dev": "nodemon src/index.ts"
 	},
 	"keywords": [],
@@ -12,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^5.13.0",
+		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
@@ -24,6 +24,7 @@
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/express-fileupload": "^1.5.0",
