--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"helmet": "^7.1.0",
 		"joi": "^17.13.0",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"uuid": "^9.0.1"
 	},
@@ -31,6 +32,7 @@
 		"@types/express": "^4.17.21",
 		"@types/express-fileupload": "^1.5.0",
 		"@types/jsonwebtoken": "^9.0.6",
+		"@types/multer": "^1.4.11",
 		"@types/mysql": "^2.15.26",
 		"@types/node": "^20.12.7",
 		"@types/uuid": "^9.0.8",
